[package]
name = "waysnap"
version = "0.1.0"
edition = "2021"
description = "Window snapping helper for labwc (Wayland)"
authors = []

[[bin]]
name = "waysnap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
